--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cookie-parser": "^1.4.3",
     "body-parser": "^1.18.3",
     "express": "^4.16.3",
     "mongoose": "^5.1.2"
